<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/layout_title"
        layout="@layout/layout_title" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tip_type_normal"
                android:textSize="@dimen/ts_normal_big"
                android:textColor="@color/gray5"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/tip_type_normal_content"
                android:textSize="@dimen/ts_normal"
                android:textColor="@color/gray4"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/tip_type_jisu"
                android:textSize="@dimen/ts_normal_big"
                android:textColor="@color/gray5"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/tip_type_jisu_content"
                android:textSize="@dimen/ts_normal"
                android:textColor="@color/gray4"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/tip_type_experts"
                android:textSize="@dimen/ts_normal_big"
                android:textColor="@color/gray5"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/tip_type_experts_content"
                android:textSize="@dimen/ts_normal"
                android:textColor="@color/gray4"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/tip_type_video"
                android:textSize="@dimen/ts_normal_big"
                android:textColor="@color/gray5"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/tip_type_video_content"
                android:textSize="@dimen/ts_normal"
                android:textColor="@color/gray4"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/tip_type_order"
                android:textSize="@dimen/ts_normal_big"
                android:textColor="@color/gray5"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/tip_type_order_content"
                android:textSize="@dimen/ts_normal"
                android:textColor="@color/gray4"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/tip_time_style"
                android:textSize="@dimen/ts_normal_big"
                android:textColor="@color/gray5"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/tip_time_style_content"
                android:textSize="@dimen/ts_normal"
                android:textColor="@color/gray4"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>